; ModuleID = '/home/carl/AnghaBench/macvim/src/extr_syntax.c_syn_unadd_group.c'
source_filename = "/home/carl/AnghaBench/macvim/src/extr_syntax.c_syn_unadd_group.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i64 }
%struct.TYPE_4__ = type { i32, i32 }

@highlight_ga = common dso_local global %struct.TYPE_3__ zeroinitializer, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @syn_unadd_group to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @syn_unadd_group() #0 {
  %1 = load i64, i64* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @highlight_ga, i32 0, i32 0), align 8
  %2 = add i64 %1, -1
  store i64 %2, i64* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @highlight_ga, i32 0, i32 0), align 8
  %3 = call %struct.TYPE_4__* (...) @HL_TABLE()
  %4 = load i64, i64* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @highlight_ga, i32 0, i32 0), align 8
  %5 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %3, i64 %4
  %6 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %5, i32 0, i32 1
  %7 = load i32, i32* %6, align 4
  %8 = call i32 @vim_free(i32 %7)
  %9 = call %struct.TYPE_4__* (...) @HL_TABLE()
  %10 = load i64, i64* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @highlight_ga, i32 0, i32 0), align 8
  %11 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %9, i64 %10
  %12 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = call i32 @vim_free(i32 %13)
  ret void
}

declare dso_local i32 @vim_free(i32) #1

declare dso_local %struct.TYPE_4__* @HL_TABLE(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
